--- a/src/app/linechart/linechart.component.css
+++ b/src/app/linechart/linechart.component.css
@@ -8,9 +8,9 @@
   .subbox {
     height: 100%;
     width: 100%;
-    
+    padding: 20px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-    color: rgb(116, 127, 135);
+    color: rgb(56, 62, 67);
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -18,16 +18,15 @@
   }
   
   
-  .subbox {
-    width: 100%;
+  .subbox1{
+    
    
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-    color: rgb(116, 127, 135);
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #8998a6;
+    font-size: 16px;
     box-sizing: border-box;
-    padding: 20px;
   }
   
   @media(max-width:320px){
@@ -118,6 +117,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
   }
   
   @media (min-width: 960px) {
@@ -271,50 +271,6 @@
     max-width: 200px;
     margin-bottom: 20px;
     box-sizing: border-box;
-  }
-  .example-accordion {
-    display: block;
-    max-width: 100%;
-  }
   
-  .example-accordion-item {
-    display: block;
-    border: solid 1px #ccc;
-  }
-  
-  .example-accordion-item + .example-accordion-item {
-    border-top: none;
-  }
-  
-  .example-accordion-item-header {
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-  }
-  
-  .example-accordion-item-description {
-    font-size: 0.85em;
-    color: #999;
-  }
-  
-  .example-accordion-item-header,
-  .example-accordion-item-body {
-    padding: 16px;
-   
-  }
-  
-  .example-accordion-item-header:hover {
-    cursor: pointer;
-    background-color: #eee;
-  }
-  
-  .example-accordion-item:first-child {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-  }
-  
-  .example-accordion-item:last-child {
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
   }
   
